--- a/Electric Cars/index.html
+++ b/Electric Cars/index.html
@@ -1,18 +1,17 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>Analysis of Electric Cars</title>
+<title>White Edition</title>
 <meta charset="utf-8">
 <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
-<body>
 <header>
   <nav class="main-nav">
     <ul>
       <li>
         <ul>
-          <li><a href="index.html" class="active">about</a></li>
-          <li><a href="projets.html">works</a></li>
+          <li><a href="index.html" class="active">quiz</a></li>
+          <li><a href="projets.html">analysis</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </li>
@@ -20,33 +19,29 @@
   </nav>
 </header>
 <section id="video" class="home">
-  <h1>Car Emissions Analysis</h1>
-  <h2>Forum on the Environment</h2>
+  <h1>Analysis of Electric Cars</h1>
+  <h2>Soil Sci 101</h2>
 </section>
-<section id="main-content">
-  <div class="text-intro">
-    <h2>About</h2>
+<div class="container">
+
+  <div class="survey-header">
+      <span class="survey-num">1-</span>
+      <p class="survey-question">How long have you been here ?</p>
   </div>
-  <div class="columns features">
-    <div class="one-third first">
-      <h3>Car Emissions</h3>
-      <p>Car Emissions are bad.</p>
-      <p><a href="#" class="more">Learn More</a></p>
-    </div>
-    <div class="one-third">
-      <h3>Electric cars are not so bad</h3>
-      <p>They use electricity</p>
-      <p><a href="#" class="more">Learn More</a></p>
-    </div>
-    <div class="one-third">
-      <h3>Electricity</h3>
-      <p>This is where the electricty comes from</p>
-      <p><a href="#" class="more">Learn More</a></p>
-    </div>
+
+  <div class="survey-body">
+      <div class="choices">
+
+      </div>
+
+      <div class="survey-footer">
+          <div class="nav-buttons">
+
+          </div>
+      </div>
   </div>
-</section>
-<footer>
-  <div class="copyright"><small>Copyright. All Rights Reserved | by <a target="_blank" rel="nofollow" href="http://www.iamsupview.be">Supview</a>.</small></div>
-</footer>
+</div>
+<script  src="index.js"></script>
+<body>
 </body>
 </html>
