--- a/Electric Cars/projets.html
+++ b/Electric Cars/projets.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>White Edition | Projects</title>
+<title>Electric Cars</title>
 <meta charset="utf-8">
 <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
@@ -10,26 +10,27 @@
   <nav class="main-nav">
     <ul>
       <li><a href="index.html">about</a></li>
-      <li><a href="projets.html" class="active">works</a></li>
+      <li><a href="projets.html" class="active">analysis</a></li>
       <li><a href="contact.html">Contact</a></li>
     </ul>
   </nav>
 </header>
 <section id="home-head" class="work">
-  <h1>We built identity for local and international clients.</h1>
+  <h1>Electric Cars</h1>
 </section>
 <section id="main-content">
   <div class="text-intro">
-    <h2>Projets</h2>
+    <h2>Analysis</h2>
   </div>
   <div class="columns">
-    <div class="img-first"><a href="#"><img src="images/supview.jpg" alt=""></a></div>
-    <div class="img-second"><a href="#"><img src="images/bouche.jpg" alt=""></a></div>
+    <div class="img-first">Electric vehicles first became an idea and came to fruition after a gasoline shortage in the 1960s and 1970s (Matulka, R., 2014). The first electric vehicles were hybrid and could only go about 45 miles per hour. This technology was advanced in the 1990s when the Clean Air Act Amendment and Energy Policy Act were implemented. Automakers created electric vehicles that could go further and faster. While this seemed like a completely eco-friendly invention at the time, the production of electric automobiles has impacts on the environment. Specifically, the mining of lithium can affect human health, native species and their ecosystem, and the economy. The demand for lithium has increased alongside the increased production of electric vehicles. Consequently, lithium resources are limited in the near future. This would cause lithium mining to become more difficult and expensive, leading to greater harmful impacts on the environment and hurting global economies. 
+      During their production, electric cars create 15-70% more carbon dioxide emissions than gasoline-powered cars due to battery manufacturing. This emission depends on the battery wattage. Electric cars are powered by lithium-ion batteries, which consist of a positive and negative electrode and an electrolyte. Usually, the negative electrode is composed of carbon and the positive electrode is made of a metal oxide. The electrolyte is made of lithium salt. Typically, there are 3-20 kilograms of lithium per vehicle battery. The lifetime and safety of lithium-ion batteries depend on several components, including composition, voltage, and energy density (Newman, N., n.d.).
+        Recently, lithium usage has grown due to the increase in production of electric cars (Wanger, T. C., 2011). As a result, lithium resources are being limited in the near future. Lithium is a necessity for not only electric cars but smartphones, laptops, cameras, grid storage, and healthcare(MetalsTech, n.d.). This will lead to lithium being more difficult to access, resulting in devastating impacts on the environment as mining companies search for it. Currently, the major lithium-production sites are in South America. Lithium carbonate is produced in salt lakes through evaporation. Then, it is washed with sodium carbonate in PVC-lined ponds. One area that has negative side effects of lithium extraction is the Bolivian salt pan Salar de Uyuni, which is the second largest but untouched lithium reserve. Production in this area could result in water pollution, as there is a freshwater river nearby that occasionally floods the salt pan. Therefore, therefore leading to repercussions on human health and native biodiversity. Furthermore, PVC barriers have the potential to leak harmful chemicals into the environment. Lithium mining can disrupt ecosystems as land is rearranged. Additionally, mining workers who breathe in dust may experience negative health impacts. One solution to the future shortage of lithium is to recycle lithium products. Currently, lithium is not recycled regularly because it is cheaper just to continue mining. If the demand for lithium continues to increase, there will be economic and environmental consequences.
+        Furthermore, the sources of electricity to power the battery can have harmful effects on the environment. Electric vehicles do not release any tailpipe emissions. However,  emissions are produced by power plants, which are dependent on fossil fuels for electricity generation (U.S. Department of Energy, n.d.). Some power plants are powered by wind, solar, or other low-polluting sources, which do not produce emissions. However, 
+      the majority of electricity sources comes from coal or natural gas. When these fossil fuels are burned, carbon dioxide is released into the atmosphere. This not only contributes to global warming but also is hazardous to the public and the environment.
+      </div>
   </div>
   </div>
 </section>
-<footer>
-  <div class="copyright"><small>Copyright. All Rights Reserved | by <a target="_blank" rel="nofollow" href="http://www.iamsupview.be">Supview</a>.</small></div>
-</footer>
 </body>
 </html>
