finished analysis page

--- a/projets.html
+++ b/projets.html
@@ -9,9 +9,8 @@
 <header>
   <nav class="main-nav">
     <ul>
-      <li><a href="index.html">about</a></li>
+      <li><a href="index.html">quiz</a></li>
       <li><a href="projets.html" class="active">analysis</a></li>
-      <li><a href="contact.html">Contact</a></li>
     </ul>
   </nav>
 </header>
@@ -23,12 +22,60 @@
     <h2>Analysis</h2>
   </div>
   <div class="columns">
-    <div class="img-first">Electric vehicles first became an idea and came to fruition after a gasoline shortage in the 1960s and 1970s (Matulka, R., 2014). The first electric vehicles were hybrid and could only go about 45 miles per hour. This technology was advanced in the 1990s when the Clean Air Act Amendment and Energy Policy Act were implemented. Automakers created electric vehicles that could go further and faster. While this seemed like a completely eco-friendly invention at the time, the production of electric automobiles has impacts on the environment. Specifically, the mining of lithium can affect human health, native species and their ecosystem, and the economy. The demand for lithium has increased alongside the increased production of electric vehicles. Consequently, lithium resources are limited in the near future. This would cause lithium mining to become more difficult and expensive, leading to greater harmful impacts on the environment and hurting global economies. 
-      During their production, electric cars create 15-70% more carbon dioxide emissions than gasoline-powered cars due to battery manufacturing. This emission depends on the battery wattage. Electric cars are powered by lithium-ion batteries, which consist of a positive and negative electrode and an electrolyte. Usually, the negative electrode is composed of carbon and the positive electrode is made of a metal oxide. The electrolyte is made of lithium salt. Typically, there are 3-20 kilograms of lithium per vehicle battery. The lifetime and safety of lithium-ion batteries depend on several components, including composition, voltage, and energy density (Newman, N., n.d.).
-        Recently, lithium usage has grown due to the increase in production of electric cars (Wanger, T. C., 2011). As a result, lithium resources are being limited in the near future. Lithium is a necessity for not only electric cars but smartphones, laptops, cameras, grid storage, and healthcare(MetalsTech, n.d.). This will lead to lithium being more difficult to access, resulting in devastating impacts on the environment as mining companies search for it. Currently, the major lithium-production sites are in South America. Lithium carbonate is produced in salt lakes through evaporation. Then, it is washed with sodium carbonate in PVC-lined ponds. One area that has negative side effects of lithium extraction is the Bolivian salt pan Salar de Uyuni, which is the second largest but untouched lithium reserve. Production in this area could result in water pollution, as there is a freshwater river nearby that occasionally floods the salt pan. Therefore, therefore leading to repercussions on human health and native biodiversity. Furthermore, PVC barriers have the potential to leak harmful chemicals into the environment. Lithium mining can disrupt ecosystems as land is rearranged. Additionally, mining workers who breathe in dust may experience negative health impacts. One solution to the future shortage of lithium is to recycle lithium products. Currently, lithium is not recycled regularly because it is cheaper just to continue mining. If the demand for lithium continues to increase, there will be economic and environmental consequences.
-        Furthermore, the sources of electricity to power the battery can have harmful effects on the environment. Electric vehicles do not release any tailpipe emissions. However,  emissions are produced by power plants, which are dependent on fossil fuels for electricity generation (U.S. Department of Energy, n.d.). Some power plants are powered by wind, solar, or other low-polluting sources, which do not produce emissions. However, 
-      the majority of electricity sources comes from coal or natural gas. When these fossil fuels are burned, carbon dioxide is released into the atmosphere. This not only contributes to global warming but also is hazardous to the public and the environment.
-      </div>
+    <p>
+      For our analysis, we tried to segregate our research about the consumer perceptions into two main categories: the environmental externalities relating to the operations of electric vehicles and the environmental externalities relating to the production of electric vehicles. 
+    </p>
+
+    <p>
+      The main takeaway that we got about the environmental effects of operating electric vehicles is that the comprehensive emissions are heavily dependent on how the electricity used to power the vehicle is sourced (ex: burning coal vs hydroelectric power). This is variable by region but we determined that on average, if the electrical grid is powered by a renewable energy source, then the emissions from operations are likely lower than those of a gas-powered vehicle.
+    </p>
+
+    <p>
+      The main takeaway that we got about the environmental effects of manufacturing electric vehicles is that the production process is typically less environmentally friendly relative to the production process for traditional automobiles. The factor making it so much less environmentally friendly is the mining of cobalt, which is an essential ingredient for the lithium ion batteries used in electric cars. The process involves leaving large quantities of ammonium sulfate in ten foot deep holes, with very few clean-up precautions in order.
+    </p>
+    In our survey, we tried to analyze what college student perceptions about how environmentally friendly electric cars were throughout their life-cycle. Since electric cars are traditionally thought to be comprehensively more eco-friendly, we wanted to form the survey analysis in a way that allowed students to realize what aspects of the manufacturing and operations processes could be potentially harmful to the environment. This way, they can demand reform and improvements to the processes which have become relatively stagnant in recent years. Through doing this, we are able to see the common misconceptions surrounding electric vehicles. 
+  </div>
+  <br>
+  According to our survey results, about 70% of participants reported believing that electric vehicles always result in less emissions than traditional gas-powered vehicles since electric vehicles do not release exhaust into the environment. However, the comprehensive effects of an electric vehicle’s emissions depend on how the local electric grid (used to fuel the car) sources its electricity. If the electric grid sources it energy through the burning of coal or other environmentally harmful means, electric cars may not be more environmentally friendly. However, very few electric car drivers source their electricity from coal-powered electrical grids. Below, is a graph that depicts the sources of electricity generation for electric cars in the state of California. 
+  </div>
+  <br>
+  <img src="images/chart.png" alt="chart">
+  <br>
+<p>
+  Another common misconception for the class relates to the percentage of electric vehicle owners that have access to rooftop solar energy in the US. About 95% of the class believed that less than 24% of electric vehicle owners have access to rooftop solar energy. However, the actual figure is 36%.This figure includes both current electric vehicle drivers and potential new buyers based on a younger age demographic of people who have expressed interested in buying an electric car in the near future. This figure should continue to increase as several west coast states such as California and Oregon have mandated solar panel use for certain structures. 
+</p>
+<br>
+<p>
+  In our survey, we tried to analyze the perception of the efficiency of the cobalt mining industry. More than seventy percent of respondents reported believing that of the ammonium sulfate contaminated source in which cobalt is extracted from, at least 2% can be utilized for the production of electric vehicles. However, Wired magazine conducted a study on a mining company in China that extracted the rare materials necessary to produce many of Tesla’s electric vehicles. In order to extract the materials, this company has to pour ammonium sulfate down ten-foot holes in the ground and the rare metals only account for 0.2 percent of what gets pulled out of the ground. The other 99.8 percent, which is now contaminated by toxic chemicals, is dumped back into the ground, resulting in potentially irreversible effects on the local ecosystem. 
+</p>
+<br>
+<p>
+  Another misconception from the survey relates to the water required to extract lithium from the ground. According to our survey results, about 80% of the class was under the impression that it takes less than 1,000 gallons of water to bring one ton of lithium to the surface during the extraction process in South America. However, in actuality, it takes about 500,000 gallons of water to extract each ton of lithium. The Andes mountains are extremely dry but mining lithium from the mountains requires an extreme amount of water. It takes 12 to 18 months for the water to evaporate after extraction, creating runoff that is disruptive to the natural ecosystem. 
+</p>
+<br>
+<p>
+  According to our survey results, about 52% of the class correctly believes that lithium ion batteries are 95% recyclable. While lithium batteries are said to be 95% recyclable, the process of recycling these batteries is a difficult process. During their lifetime, the batteries endure irreversible damage. They need to be taken apart and have the lithium removed. The electrolyte portion of the batteries consists of a variety of additives. This part of the battery is known to be explosive when handled incorrectly or exposed to high temperatures. This means the recycling process would have to dismantle to batteries safely. Because of the process of recycling lithium batteries, only 2% are recycled in Australia. 
+</p>
+
+  <div class="text-intro">
+    <h2>Bibliography</h2>
+  </div>
+  <div class="columns">
+    <div class="img-first">
+      <a href=“https://cleantechnica.com/2018/02/06/evs-dont-run-electricity-coal-power-plants/”>Clean Technica</a>
+      <br>
+      <a href=“https://www.fleetcarma.com/facts-electric-vehicles/”>Fleet Carma</a>
+      <br>
+      <a href=“https://www.wired.com/2016/03/teslas-electric-cars-might-not-green-think/”>Wired</a>
+      <br>
+      <a href=“https://www.fueleconomy.gov/feg/evtech.shtml”>Fuel Economy</a>
+      <br>
+      <a href=“https://abcnews.go.com/Travel/wireStory/aaa-cold-weather-cut-electric-car-range-40-60902845”>ABC News</a>
+      <br>
+      <a href=“https://www.ergon.com.au/network/smarter-energy/electric-vehicles/benefits-of-electric-vehicles”>Ergon</a>
+      <br>
+      <a href=“https://www.engineering.com/ElectronicsDesign/ElectronicsDesignArticles/ArticleID/17435/Will-Your-Electric-Car-Save-the-World-or-Wreck-It.aspx”>Engineering.com</a>
+    </div>
   </div>
   </div>
 </section>
