Fixed bibliography links

--- a/projets.html
+++ b/projets.html
@@ -62,19 +62,19 @@
   </div>
   <div class="columns">
     <div class="img-first">
-      <a href=“https://cleantechnica.com/2018/02/06/evs-dont-run-electricity-coal-power-plants/”>Clean Technica</a>
+      <a href=https://cleantechnica.com/2018/02/06/evs-dont-run-electricity-coal-power-plants/ target="_blank">Clean Technica</a>
       <br>
-      <a href=“https://www.fleetcarma.com/facts-electric-vehicles/”>Fleet Carma</a>
+      <a href=https://www.fleetcarma.com/facts-electric-vehicles/>Fleet Carma</a>
       <br>
-      <a href=“https://www.wired.com/2016/03/teslas-electric-cars-might-not-green-think/”>Wired</a>
+      <a href=https://www.wired.com/2016/03/teslas-electric-cars-might-not-green-think/>Wired</a>
       <br>
-      <a href=“https://www.fueleconomy.gov/feg/evtech.shtml”>Fuel Economy</a>
+      <a href=https://www.fueleconomy.gov/feg/evtech.shtml>Fuel Economy</a>
       <br>
-      <a href=“https://abcnews.go.com/Travel/wireStory/aaa-cold-weather-cut-electric-car-range-40-60902845”>ABC News</a>
+      <a href=https://abcnews.go.com/Travel/wireStory/aaa-cold-weather-cut-electric-car-range-40-60902845>ABC News</a>
       <br>
-      <a href=“https://www.ergon.com.au/network/smarter-energy/electric-vehicles/benefits-of-electric-vehicles”>Ergon</a>
+      <a href=https://www.ergon.com.au/network/smarter-energy/electric-vehicles/benefits-of-electric-vehicles>Ergon</a>
       <br>
-      <a href=“https://www.engineering.com/ElectronicsDesign/ElectronicsDesignArticles/ArticleID/17435/Will-Your-Electric-Car-Save-the-World-or-Wreck-It.aspx”>Engineering.com</a>
+      <a href=https://www.engineering.com/ElectronicsDesign/ElectronicsDesignArticles/ArticleID/17435/Will-Your-Electric-Car-Save-the-World-or-Wreck-It.aspx>Engineering.com</a>
     </div>
   </div>
   </div>
